ansible/bastion/files/k3s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: 5432
